More overflow fixes

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -821,6 +821,7 @@ section {
 --------------------------------------------------*/
 
 main {
+    overflow: hidden;
     padding-top: 110px;
 
     .section-heading {
